Fix overlap in menu bar
Fix the overlapping of the search items and the other menu buttons.
Adding the navbar-right ensures the seach will stay in the upper right
corner.

--- a/public/css/index/index.index.css
+++ b/public/css/index/index.index.css
@@ -130,6 +130,7 @@ div.SearchResultEntry:hover{
 
 div#infoElement{
   height:90px;
+  min-width: 450px;
   overflow-x: hidden;
   overflow-y: hidden;
   -webkit-box-shadow: #AAA 0 0 3px;
